<resources>
    <string name="app_name">Rates Calculator</string>
    <string name="nav_home">Home</string>
    <string name="nav_credits">Credits</string>
    <string name="nav_deposits">Deposits</string>
    <string name="nav_my_applications">My applications</string>
    <string name="tv_credit_rate_calculator">Credit rate calculator</string>
    <string name="rg_credits_personal_loan">Personal loan</string>
    <string name="rg_credits_mortgage_loan">Mortgage loan</string>
    <string name="tv_desired_amount_text">Desired amount:</string>
    <string name="tv_drag_the_seekbar_amount">Drag the seekbar until you get the desired amount</string>
    <string name="rg_fixed_interest">Fixed interest</string>
    <string name="rg_variable_interest">Variable interest</string>
    <string name="tv_over_a_period_of">Over a period of:</string>
    <string name="tv_years">years</string>
    <string name="tv_collect_salary">Collect the salary through us</string>
    <string name="tv_first_rate_value">First rate value: </string>
    <string name="tv_total_payment">Total payment: </string>
    <string name="tv_interest">Interest rate: </string>
    <string name="hint_drag_the_seekbar">Drag the seekbar until you get the desired amount</string>
    <string name="amount_to_be_borrowed">The amount that can be borrowed for %1$s is between the equivalent of %2$s and %3$s RON</string>
    <string name="invalid_field">The %1$s field does not contain valid data!</string>
    <string name="deposit_check_failed">You have to fill the data and press the "Calculate" button before trying to get the offer!</string>
    <string name="data_inserted_succesfully">The data was saved successfully and you can see your registration in "Active applications" module!</string>
    <string name="no_data_found">There is currently no active request for checked product to show.
        You can register one in the correspondent module and come back later.</string>
    <string name="successfully_deleted">Selected item was successfully deleted.</string>
    <string name="successfully_updated">Selected item was successfully updated.</string>
    <string name="update_credit_error">This item cannot be updated.</string>
    <string name="error_deleted">Selected item could not be deleted.</string>
    <string name="btn_get_offer">Get the offer</string>
    <string name="tv_deposit_calculator">Deposit calculator</string>
    <string name="tv_deposited_amount">Deposited amount: </string>
    <string name="tv_deposit_duration">Deposit duration: </string>
    <string name="btn_calculate">Calculate</string>
    <string name="tv_the_amount_saved">The amount saved</string>
    <string name="tv_deposited_amount_value">Deposited amount: </string>
    <string name="tv_interest_rate">Interest rate: </string>
    <string name="tv_interest_tax">Interest tax: </string>
    <string name="tv_period">Period: </string>
    <string name="tv_earnings">Earnings: </string>
    <string name="tv_accumulated_amount">Accumulated amount: </string>
    <string name="value_100">100</string>
    <string name="default_interest">0.25</string>
    <string name="tv_last_step">Last step</string>
    <string name="tv_complete_fields">Please complete the following fields in order to submit your application</string>
    <string name="tv_first_name">First name</string>
    <string name="tv_last_name">Last name</string>
    <string name="tv_phone_number">Phone number</string>
    <string name="e_mail">E-mail</string>
    <string name="tv_choose_the_date">Choose the date when you want to be contacted</string>
    <string name="info_get_offer">You must insert the desired amount in order to get an offer!</string>
    <string name="info_maximum_depo">Maximum amount that can be deposited is 100.000 RON but not less than 1500 RON.</string>
    <string name="info_complete_interest">The interest rate must be completed</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit">Submit</string>
    <string name="tv_active_applications">Active applications</string>
    <string name="tv_empty_val">-</string>
    <string name="ct_bank_picture">Bank picture</string>
    <string name="active_applications">Active applications</string>
    <string name="empty_string" />
    <string name="tv_bank_products">Bank products</string>
    <string name="tv_interest_interval">Interest interval:</string>
    <string name="tv_amount_interval">Amount interval:</string>
    <string name="bank_products">Bank products</string>
    <string name="tv_credit">Credit</string>
    <string name="tv_deposit">Deposit</string>
    <string name="iv_delete">Delete</string>
    <string name="tv_edit">Edit</string>
    <string name="personal_loan">Personal loan</string>
    <string name="value_1000">1000</string>
    <string name="value_100000">100.000</string>
    <string name="title_personal_loan">Amount personal loan limit</string>
    <string name="mortgage_loan">Mortgage loan</string>
    <string name="value_200000">200.000</string>
    <string name="value_450000">450.000</string>
    <string name="title_mortgage_loan">Amount mortgage loan limit</string>
    <string name="text_OK">Ok</string>
    <string name="info">Info</string>
    <string name="email">\" e-mail \"</string>
    <string name="email_format">E-mail format: xxxxx@******</string>
    <string name="phone_number">\" phone number \"</string>
    <string name="format_phone_number">Phone number format: 07xxxxxxxx</string>
    <string name="first_name">\" first name \"</string>
    <string name="title_first_name">Invalid first name</string>
    <string name="last_name">\" last name \"</string>
    <string name="title_last_name">Invalid last name</string>
    <string name="date">\" date \"</string>
    <string name="title_date">Invalid Date</string>
    <string name="title_invalid_amount">Invalid amount</string>
    <string name="info_operations">Please select a row in order to delete or update!</string>
    <string-array name="sp_credit_period">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>9</item>
        <item>12</item>
        <item>30</item>
        <item>35</item>
    </string-array>
    <string-array name="sp_deposit_period">
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>4 months</item>
        <item>5 months</item>
        <item>6 months</item>
        <item>7 months</item>
        <item>8 months</item>
        <item>9 months</item>
        <item>12 months</item>
        <item>18 months</item>
        <item>24 months</item>
        <item>36 months</item>
        <item>60 months</item>
    </string-array>
</resources>