<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:background="@color/white"
    tools:context=".DepositsFragment"

    >

    <TextView
        android:id="@+id/tv_deposits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/tv_deposit_calculator"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_deposit_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_deposited_amount"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_deposits" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_deposit_amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/tv_deposit_amount"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintLeft_toRightOf="@+id/tv_deposit_amount"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_deposit_amount"
        app:layout_constraintVertical_bias="0.461" />

    <TextView
        android:id="@+id/tv_deposit_period"
        android:layout_width="wrap_content"
        android:layout_height="28dp"
        android:layout_marginTop="32dp"
        android:text="@string/tv_deposit_duration"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/tv_deposit_amount"
        app:layout_constraintStart_toStartOf="@+id/tv_deposit_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_deposit_amount" />

    <Spinner
        android:id="@+id/sp_deposit_period"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="16dp"
        android:entries="@array/sp_deposit_period"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_deposit_period"
        app:layout_constraintLeft_toRightOf="@+id/tv_deposit_period"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_deposit_period"
        app:layout_constraintTop_toTopOf="@+id/tv_deposit_period"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_interest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/tv_interest"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="@+id/tv_deposit_period"
        app:layout_constraintStart_toStartOf="@+id/tv_deposit_period"
        app:layout_constraintTop_toBottomOf="@+id/tv_deposit_period" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/tv_interest_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="@+id/tv_interest"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintLeft_toRightOf="@+id/tv_interest"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_interest"
        app:layout_constraintVertical_bias="0.423" />


    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_calculate"
        android:layout_marginTop="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_interest_value"
        app:layout_constraintRight_toLeftOf="@+id/btn_get_offer"
         />

    <Button
        android:id="@+id/btn_get_offer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/btn_get_offer"
        app:layout_constraintLeft_toRightOf="@+id/btn_calculate"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_calculate"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_group_depo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="@color/white"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@+id/btn_calculate"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate"
        app:layout_constraintRight_toRightOf="parent"
        tools:context=".DepositsFragment">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_the_amount_saved"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_deposited"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_deposited_amount"
            app:layout_constraintLeft_toLeftOf="@+id/tv_info"
            app:layout_constraintRight_toRightOf="@+id/tv_info"
            app:layout_constraintStart_toStartOf="@+id/tv_interest_rate"
            app:layout_constraintTop_toBottomOf="@+id/tv_info" />

        <TextView
            android:id="@+id/tv_deposited_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_deposited"
            app:layout_constraintStart_toEndOf="@+id/tv_deposited"
            app:layout_constraintTop_toBottomOf="@+id/tv_info" />

        <TextView
            android:id="@+id/tv_interest_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_interest_rate"
            app:layout_constraintLeft_toLeftOf="@+id/tv_deposited"
            app:layout_constraintRight_toRightOf="@+id/tv_deposited"
            app:layout_constraintTop_toBottomOf="@+id/tv_deposited" />

        <TextView
            android:id="@+id/tv_interest_rate_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_interest_rate"
            app:layout_constraintStart_toEndOf="@+id/tv_interest_rate"
            app:layout_constraintTop_toBottomOf="@+id/tv_deposited_value" />

        <TextView
            android:id="@+id/tv_interest_tax"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_interest_tax"
            app:layout_constraintLeft_toLeftOf="@+id/tv_interest_rate"
            app:layout_constraintRight_toRightOf="@+id/tv_interest_rate"
            app:layout_constraintTop_toBottomOf="@+id/tv_interest_rate" />

        <TextView
            android:id="@+id/tv_interest_tax_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_interest_tax"
            app:layout_constraintStart_toEndOf="@+id/tv_interest_tax"
            app:layout_constraintTop_toBottomOf="@+id/tv_interest_rate_value" />

        <TextView
            android:id="@+id/tv_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_period"
            app:layout_constraintLeft_toRightOf="@+id/tv_interest_tax"
            app:layout_constraintStart_toStartOf="@+id/tv_interest_tax"
            app:layout_constraintTop_toBottomOf="@+id/tv_interest_tax" />

        <TextView
            android:id="@+id/tv_period_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_period"
            app:layout_constraintStart_toEndOf="@+id/tv_period"
            app:layout_constraintTop_toBottomOf="@id/tv_interest_tax_value" />

        <TextView
            android:id="@+id/tv_earnings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_earnings"
            app:layout_constraintLeft_toRightOf="@+id/tv_period"
            app:layout_constraintStart_toStartOf="@+id/tv_period"
            app:layout_constraintTop_toBottomOf="@+id/tv_period" />

        <TextView
            android:id="@+id/tv_earnings_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_earnings"
            app:layout_constraintStart_toEndOf="@+id/tv_earnings"
            app:layout_constraintTop_toBottomOf="@+id/tv_period_value" />

        <TextView
            android:id="@+id/tv_accumulated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_accumulated_amount"
            app:layout_constraintLeft_toRightOf="@+id/tv_earnings"
            app:layout_constraintStart_toStartOf="@+id/tv_earnings"
            app:layout_constraintTop_toBottomOf="@+id/tv_earnings" />

        <TextView
            android:id="@+id/tv_accumulated_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/tv_accumulated"
            app:layout_constraintStart_toEndOf="@+id/tv_accumulated"
            app:layout_constraintTop_toBottomOf="@+id/tv_earnings_value" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>