<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_row_lv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_credit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/ct_bank_picture"
        />

    <TextView
        android:id="@+id/tv_application_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:fontFamily="@font/amaranth_bold"
        app:layout_constraintLeft_toRightOf="@+id/iv_row_lv"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="left"
        />

    <ImageView
        android:id="@+id/ib_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_delete_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_applications"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/iv_delete"
        />

    <ImageView
        android:id="@+id/ib_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintTop_toBottomOf="@+id/ib_delete"
        app:layout_constraintRight_toRightOf="parent"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/tv_edit"
        />

    <TextView
        android:id="@+id/tv_appl_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:textColor="@color/black"
        android:fontFamily="@font/amaranth_bold"
        app:layout_constraintLeft_toRightOf="@+id/tv_application_type"
        app:layout_constraintRight_toLeftOf="@+id/ib_delete"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/ib_delete"
        android:gravity="right"

        />

    <TextView
        android:id="@+id/tv_applications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:fontFamily="@font/amaranth_bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_row_lv"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"

        />

</androidx.constraintlayout.widget.ConstraintLayout>